@@ -1,3 +1,8 @@
+2013-07-01  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* tek.c: Replace bzero(t, l) => memset(t, 0, l) and bcmp() =>
+	memcmp().
+
 2012-11-20  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	* Makefile.am: Avoid use of deprecated INCLUDES.
